fixed photo on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -47,6 +47,7 @@ header {
   padding: 0.5rem;
   justify-content: space-between;
 }
+
 header.welcome,
 header i {
   color: #f5f5f5;
@@ -431,7 +432,7 @@ input {
 
   .thankyou-photo {
     width: 100%;
-    max-height: 25vh;
+    max-height: 26vh;
   }
 }
 
